# LLM_Lab

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt  setup.py  setup.sh
app/: __init__.py  cli_runner.py  main.py  web_fastapi_app.py  web_fastapi_page.html  web_gradio_app.py  web_runner.py  web_streamlit_app.py
config/: profiles.example.yaml  profiles.yaml
scripts/: sync_requirements.py
service/: __init__.py  capability_service.py  chat_service.py  session_service.py
tests/: test_capability_detector.py  test_chat_service.py  test_cli_shell.py  test_config_loader.py  test_media_processor.py  test_web_fastapi_app.py
utils/: __init__.py  config_loader.py  logger.py  media_utils.py  openai_client.py
